[tool.poetry]
name = "daybreak-ml-docs"
version = "0.1.0"
description = ""
authors = ["LAPTOP-VCGCOL4V <petercbull@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anthropic = ">=0.20.0"
openai = "^1.14.3"
llama-index = "^0.10.25"
requests = "^2.31.0"
llama-index-llms-anthropic = "^0.1.7"
python-dotenv = "^1.0.1"
langchain = "^0.1.13"
ragas = "^0.1.5"
ipywidgets = "^8.1.2"
tqdm = "^4.66.2"
chromadb = "^0.4.24"
datasets = "^2.18.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
langfuse = "^2.21.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
