[tool.poetry]
name = "daybreak-ml-docs"
version = "0.1.0"
description = ""
authors = ["LAPTOP-VCGCOL4V <petercbull@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
anthropic = ">=0.20.0"
openai = "^1.14.3"
llama-index = "^0.10.25"
requests = "^2.31.0"
llama-index-llms-anthropic = "^0.1.7"
python-dotenv = "^1.0.1"
langchain = "^0.1.13"
ragas = "^0.1.5"
ipywidgets = "8.0.4"
tqdm = "^4.66.2"
chromadb = "^0.4.24"
datasets = "<2.15.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
langfuse = "^2.21.1"
langsmith = "^0.1.38"
numpy = "^1.26.4"
transformers = "^4.39.2"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
accelerate = "^0.28.0"
bitsandbytes = "^0.43.0"
peft = "^0.10.0"
huggingface-hub = "^0.22.2"
weaviate-client = "^4.5.4"
psycopg2 = "^2.9.9"
pgvector = "^0.2.5"
tiktoken = "^0.6.0"
nbdev = "^2.3.13"
arize-phoenix = {extras = ["evals"], version = "^3.19.3"}
openinference-instrumentation-dspy = "0.1.3"
dspy = {git = "https://github.com/stanfordnlp/dspy.git"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
