[tool.poetry]
name = "regen-ai-backend"
version = "0.1.0"
description = ""
authors = ["LAPTOP-VCGCOL4V <petercbull@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
fastapi = "^0.110.1"
watchdog = "^4.0.0"
debugpy = "^1.8.1"
uvicorn = "^0.29.0"
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
nbdev = "^2.3.13"
torch = "^2.2.2"
openinference-instrumentation-dspy = "0.1.3"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
datasets = "<2.15.0"
llama-index-llms-anthropic = "^0.1.7"
seaborn = "^0.13.2"
transformers = "^4.39.2"
accelerate = "^0.28.0"
tqdm = "^4.66.2"
torchvision = "^0.17.2"
ipywidgets = "8.0.4"
torchaudio = "^2.2.2"
anthropic = ">=0.20.0"
openai = "^1.14.3"
llama-index = "^0.10.25"
langfuse = "^2.21.1"
langchain = "^0.1.13"
ragas = "^0.1.5"
dspy-ai = "^2.4.0"
langsmith = "^0.1.38"
peft = "^0.10.0"
bitsandbytes = "^0.43.0"
huggingface-hub = "^0.22.2"
weaviate-client = "^4.5.4"
arize-phoenix = {extras = ["evals"], version = "^3.19.3"}
pgvector = "^0.2.5"
psycopg2 = "^2.9.9"
tiktoken = "^0.6.0"
chromadb = "^0.4.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
