[tool.poetry]
name = "gradio-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"

dspy-ai = "^2.4.5"
opentelemetry-exporter-otlp = "^1.24.0"
psycopg2 = "^2.9.9"
pgvector = "^0.2.5"
numpy = "^1.26.4"
pandas = "^2.2.2"
gradio = "^4.26.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"
openai = "^1.17.1"
anthropic = "^0.25.1"
llama-index = "^0.10.28"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
arize-phoenix = {extras = ["evals"], version = "^3.21.0"}
openinference-instrumentation-dspy = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
