[tool.poetry]
name = "regen-requester"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
anthropic = ">=0.20.0"
openai = "^1.14.3"
llama-index = "^0.10.25"
requests = "^2.31.0"
llama-index-llms-anthropic = "^0.1.7"
python-dotenv = "^1.0.1"
langchain = "^0.1.13"
ragas = "^0.1.5"
ipywidgets = "8.0.4"
tqdm = "^4.66.2"
chromadb = "^0.4.24"
datasets = "<2.15.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
langfuse = "^2.21.1"
langsmith = "^0.1.38"
numpy = "^1.26.4"
transformers = "^4.39.2"
accelerate = "^0.28.0"
peft = "^0.10.0"
huggingface-hub = "^0.22.2"
weaviate-client = "^4.5.4"
psycopg2 = "^2.9.9"
pgvector = "^0.2.5"
tiktoken = "^0.6.0"
nbdev = "^2.3.13"
arize-phoenix = {extras = ["evals"], version = "^3.19.4"}
openinference-instrumentation-dspy = "0.1.3"
watchdog = "^4.0.0"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pytest = "^8.1.1"
dspy = {git = "https://github.com/stanfordnlp/dspy.git"}
aiofiles = "^23.2.1"
opentelemetry-exporter-otlp = "^1.24.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
